--- a/DataProcessing/DataProcessing/Window3.xaml
+++ b/DataProcessing/DataProcessing/Window3.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="Window2" Height="300" Width="300">
     <Grid>
-        
+        <Button Background="Black"
+                Width="200"
+                Height="200"></Button>
     </Grid>
 </Window>
