--- a/DataProcessing/DataProcessing/thietlapHeSo.xaml
+++ b/DataProcessing/DataProcessing/thietlapHeSo.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:DataProcessing"
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
-      Title="Colro Analysis">
+      Title="Color Analysis">
     <Grid>
     <StackPanel
         Height="1080"
@@ -27,7 +27,7 @@
                    VerticalAlignment="Top"
                    HorizontalAlignment="Center">
         </Rectangle>
-        <Rectangle x:Name="the2ndtoprec" Fill="#009e49" 
+        <Rectangle x:Name="the2ndtoprec" Fill="#009e49"
                    StrokeThickness="0"
                    Height="17"
                    Width="1920"
