--- a/DataProcessing/DataProcessing/thietlapHeSo.xaml
+++ b/DataProcessing/DataProcessing/thietlapHeSo.xaml
@@ -5,44 +5,46 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DataProcessing"
       mc:Ignorable="d" 
-      d:DesignHeight="1080" d:DesignWidth="1920"
+      d:DesignHeight="720" d:DesignWidth="1280"
       Title="ColorAnalysis">
     <Grid>
         <StackPanel
-        Height="1080"
-        Width="1920"
+        Height="720"
+        Width="1280"
         Background="White"
         VerticalAlignment="Center"
         HorizontalAlignment="Center">
             <!--Start Top bar-->
             <Grid>
-                <StackPanel
+                <Grid>
+                    <StackPanel
                     VerticalAlignment="Top"
                     HorizontalAlignment="Center">
-                    <Rectangle 
+                        <Rectangle 
                         Fill="#0e6633" 
-                        Height="170"
-                        Width="1920"
+                        Height="130"
+                        Width="1280"
                         Stroke="Transparent"
                         StrokeThickness="0"
                         VerticalAlignment="Top"
                         HorizontalAlignment="Center">
-                    </Rectangle>
-                    <Rectangle x:Name="the2ndtoprec" Fill="#009e49" 
+                        </Rectangle>
+                        <Rectangle x:Name="the2ndtoprec" Fill="#009e49" 
                                StrokeThickness="0"
-                               Height="17"
-                               Width="1920"
+                               Height="15"
+                               Width="1280"
                                Stroke="Transparent"
                                VerticalAlignment="Top"
                                HorizontalAlignment="Center"/>
-                </StackPanel>
+                    </StackPanel>
+                </Grid>
                 <TextBlock
                     FontFamily="Code Bold"
                     Foreground="White"
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
                     HorizontalAlignment="Left"
-                    FontSize="55"
-                    Margin="35 35 0 0">
+                    FontSize="40"
+                    Margin="35 0 0 15">
                     Color
                     <LineBreak/>
                     Analysis
@@ -50,158 +52,186 @@
             </Grid>
             <!--End Top bar-->
             <!--Start Mid-->
-            <StackPanel
-                Width="1275"
-                HorizontalAlignment="Center">
-                <!--Start Browse Button-->
-                <Grid
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Margin="0 50 0 0">
-                    <Rectangle
-                Fill="#009e49" 
-                Height="90"
-                Width="1275"
-                Stroke="Transparent"
-                StrokeThickness="0"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center">
-                    </Rectangle>
-                    <TextBox
+            <Grid
+                Margin="0 20 0 0">
+                <StackPanel            
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top">
+                    <!--Start Browse Button-->
+                    <Grid
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left">
+                        <Rectangle
+                        Fill="#009e49" 
+                        Height="60"
+                        Width="800"
+                        Stroke="Transparent"
+                        StrokeThickness="0"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"></Rectangle>
+                        <TextBox
                         x:Name="txtFilePath"
                         Background="White"
                         FontSize="40"
                         TextWrapping="NoWrap"
-                        Height="60"
-                        Width="1025"     
+                        Height="40"
+                        Width="600"     
                         VerticalAlignment="Center"
                         HorizontalAlignment="Left"
                         Margin="15 0 0 0">
-                    </TextBox>
-                    <Button
+                        </TextBox>
+                        <Button
                         Background="#55d455"
-                        Height="60"
-                        Width="180"
+                        Height="40"
+                        Width="140"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Right"
                         BorderThickness="0"
                         Margin="0 0 15 0"
                         Click="browseFile">
-                        <TextBlock
+                            <TextBlock
                             Text="Browse"
                             Foreground="White"
                             Background="Transparent"
-                            FontSize="40"
+                            FontSize="30"
                             FontFamily="Code Bold"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
-                            Margin="0 10 0 0"></TextBlock>
-                    </Button>
-                </Grid>
-                <!--End Browse Button-->
-                <TextBlock
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Left"
-                    Margin="0 20 0 0"
-                    FontSize="57"
-                    FontWeight="Bold"
-                    Foreground="#009e49">Thiết lập tham số</TextBlock>
-                <!--Start Thoi gian tim kiem -->
-                <Grid VerticalAlignment="Center"
-                      HorizontalAlignment="Left"
-                      Margin="0 25 0 0">
-                    <TextBlock                        
-                        FontSize="27"
-                        FontWeight="Regular"
-                        >Khoảng thời gian tìm kiếm :</TextBlock>
-                    <DatePicker
-                        x:Name="startd"
-                        VerticalAlignment="Center"
-                        FontSize="23"
-                        Margin="360,0,-179,0"
-                        ></DatePicker>
+                            Margin="0 6 0 0"></TextBlock>
+                        </Button>
+                    </Grid>
+                    <!--End Browse Button-->
                     <TextBlock
-                        FontSize="27"
-                        FontWeight="Regular"
-                        Margin="540,0,-228,0">
-                        tới
-                    </TextBlock>
-                    <DatePicker
-                        x:Name="endd"
                         VerticalAlignment="Center"
-                        FontSize="23"
-                        Margin="588,0,-407,0"
+                        HorizontalAlignment="Left"
+                        Margin="0 15 0 0"
+                        FontSize="35"
+                        FontWeight="Bold"
+                        Foreground="#009e49">Thiết lập tham số</TextBlock>
+                    <!--Start Thoi gian tim kiem -->
+                    <Grid HorizontalAlignment="Left"
+                          Margin="0 20 0 0">
+                        <TextBlock
+                            FontSize="23"
+                            Margin="0 0 0 0"
+                        >Khoảng thời gian tìm kiếm :</TextBlock>
+                        <DatePicker
+                            x:Name="startd"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Left"
+                            FontSize="20"
+                            Margin="290 0 0 0 "
                         ></DatePicker>
-                </Grid>
-                <!--End Thoi gian tim kiem -->
-                <!--Start So luong mau moi nhom-->
-                <StackPanel
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Left">
-                    <TextBlock                        
-                        FontSize="27"
+                        <TextBlock
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            FontSize="23"
+                            FontWeight="Regular"
+                            Margin="450 0 0 0">
+                        tới
+                        </TextBlock>
+                        <DatePicker
+                            x:Name="endd"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Left"
+                            FontSize="20"
+                            Margin="490 0 0 0"
+                        ></DatePicker>
+                    </Grid>
+                    <!--End Thoi gian tim kiem -->
+                    <!--Start So luong mau moi nhom-->
+                    <Grid
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Margin="0 7 0 0">
+                        <TextBlock                        
+                        FontSize="23"
                         FontWeight="Regular"
                         >Số lượng màu mỗi nhóm :</TextBlock>
-                    <Grid
+                        <Grid
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        Margin="0 10 0 0">
-                        <RadioButton
+                        Margin="280 10 0 0">
+                            <RadioButton
                             Margin="0,0,0,-0.2"
                             Content="2"
-                            FontSize="23"
-                            Padding="5 -10 0 0 "
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
                             HorizontalAlignment="Left"
                             VerticalAlignment="Bottom"
                             Checked="RadioButton2_Checked"
                             Unchecked="RadioButton2_Unchecked"
                         ></RadioButton>
-                        <RadioButton
+                            <RadioButton
                             Margin="70 0 0 0"
                             Content="3"
-                            FontSize="23"
-                            Padding="5 -10 0 0 "
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             Checked="RadioButton3_Checked"
                             Unchecked="RadioButton3_Unchecked"
                         ></RadioButton>
-                        <RadioButton
+                            <RadioButton
                             Margin="140 0 0 0"
                             Content="4"
-                            FontSize="23"
-                            Padding="5 -10 0 0 "
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             Checked="RadioButton4_Checked"
                             Unchecked="RadioButton4_Unchecked"
                         ></RadioButton>
-                        <RadioButton
+                            <RadioButton
                             Margin="210 0 0 0"
                             Content="5"
-                            FontSize="23"
-                            Padding="5 -10 0 0 "
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             Checked="RadioButton5_Checked"
                             Unchecked="RadioButton5_Unchecked"
                         ></RadioButton>
+                        </Grid>
                     </Grid>
-                </StackPanel>
-                <!--End So luong mau moi nhom-->
-                <!--Start Thoi gian tim kiem gioi han-->
-                <Grid VerticalAlignment="Center"
-                      HorizontalAlignment="Left">
-                    <TextBlock                        
-                        FontSize="27"
+                    <!--End So luong mau moi nhom-->
+                    <!--Start Thoi gian tim kiem gioi han-->
+                    <Grid VerticalAlignment="Center"
+                          HorizontalAlignment="Left"
+                          Margin="0 7 0 0">
+                        <TextBlock                        
+                        FontSize="23"
                         FontWeight="Regular"
                         >Thời gian tìm kiếm giới hạn :</TextBlock>
-                    <TextBox Margin="360,0,-80,0"></TextBox>
-                </Grid>
-                <!--End Thoi gian tim kiem gioi han-->
-            </StackPanel>
-            <!--End Mid-->
+                        <TextBox HorizontalAlignment="Left"
+                            VerticalAlignment="Bottom"
+                                 FontSize="20"
+                            Margin="300 0 0 0"
+                            TextWrapping="NoWrap"
+                            Width="70"></TextBox>
+                    </Grid>
+                    <!--End Thoi gian tim kiem gioi han-->
+                    <!--Start Ngưỡng số lượng bán ra-->
+                    <Grid VerticalAlignment="Center"
+                          HorizontalAlignment="Left"
+                          Margin="0 7 0 0">
+                        <TextBlock                        
+                        FontSize="23"
+                        FontWeight="Regular"
+                        >Ngưỡng số lượng bán ra :</TextBlock>
+                        <TextBox 
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Bottom"
+                                 FontSize="20"
+                            Margin="280 0 0 0"
+                            TextWrapping="NoWrap"
+                            Width="70"></TextBox>
+                    </Grid>
+                    <!--End Ngưỡng số lượng bán ra-->
+                </StackPanel>
+            </Grid>
         </StackPanel>
+        <!--End Mid-->
         <!--Start Btm-->
         <Grid
             VerticalAlignment="Bottom"
@@ -210,21 +240,21 @@
             <!--Start TimKiem Button-->
             <Rectangle
                 Fill="#009e49" 
-                Height="90"
-                Width="485"
+                Height="70"
+                Width="385"
                 Stroke="Transparent"
                 StrokeThickness="0">
             </Rectangle>
             <Button
                 Click="startSearch"
                 Background="#55d455" 
-                Height="65"
-                Width="460"
+                Height="45"
+                Width="355"
                 BorderThickness="0">
                 <TextBlock
                     Background="Transparent"
                     Foreground="White"
-                    FontSize="40"
+                    FontSize="30"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center">
                     TIẾN HÀNH TÌM KIẾM
