--- a/DataProcessing/DataProcessing/Welcome.xaml
+++ b/DataProcessing/DataProcessing/Welcome.xaml
@@ -69,13 +69,14 @@
             Height="Auto"
             VerticalAlignment="Center"
             HorizontalAlignment="Center">
-                <MediaElement x:Name="myGif"
-                      UnloadedBehavior="Manual"
-                      Source="D:\Working\Project1\DataProcessing\DataProcessing\Assets\aaa.gif" 
-                      LoadedBehavior="Play"
-                      MediaEnded="myGif_MediaEnded"
-                      Stretch="UniformToFill"
-                      ></MediaElement>
+                <MediaElement 
+                    x:Name="myGif"
+                    UnloadedBehavior="Manual"
+                    Source="D:\Working\Project1\DataProcessing\DataProcessing\Assets\aaa.gif" 
+                    LoadedBehavior="Play"
+                    MediaEnded="myGif_MediaEnded"
+                    Stretch="UniformToFill"
+                    ></MediaElement>
             </Viewbox>
         </StackPanel>
         <!--Start Btm-->
