--- a/DataProcessing/DataProcessing/FindingStatus.xaml
+++ b/DataProcessing/DataProcessing/FindingStatus.xaml
@@ -84,7 +84,9 @@
                         VerticalAlignment="Center"
                         HorizontalAlignment="Left"
                         FontSize="20"
-                        >Thời điểm tiến hành tìm kiếm</TextBlock>
+                        >Thời điểm tiến hành tìm kiếm <TextBlock
+                            TextWrapping="NoWrap"
+                            x:Name="timestart">abc</TextBlock></TextBlock>
                     </StackPanel>
                     <StackPanel
                     VerticalAlignment="Top"
@@ -191,7 +193,7 @@
                         HorizontalAlignment="Right">Khoảng thời gian tìm kiếm :</TextBlock>
                         <TextBlock Foreground="#009e49">
                         từ ngày 
-                        <TextBlock FontWeight="Bold">nn/tt/nn</TextBlock>
+                        <TextBlock x:Name="startday" FontWeight="Bold">nn/tt/nn</TextBlock>
                         đến ngày
                         <TextBlock FontWeight="Bold">nn/tt/nn</TextBlock>
                     </TextBlock>
@@ -209,15 +211,6 @@
                     </TextBlock>
                     </StackPanel>
                 </Grid>
-                <ProgressBar
-                        Grid.Column="1"
-                        Grid.Row="2"
-                        HorizontalAlignment="Center"
-                        Height="50"
-                        Margin="0,30,0,0"
-                        VerticalAlignment="Top"
-                        Width="600"
-                        Foreground="Salmon"/>
             </StackPanel>
             <!--End Mid-->
         </StackPanel>
