--- a/DataProcessing/DataProcessing/Welcome.xaml
+++ b/DataProcessing/DataProcessing/Welcome.xaml
@@ -72,7 +72,7 @@
                 <MediaElement 
                     x:Name="myGif"
                     UnloadedBehavior="Manual"
-                    Source="\Project1\DataProcessing\DataProcessing\Assets\aaa.gif" 
+                    Source="\New folder\Project1\DataProcessing\DataProcessing\Assets\aaa.gif" 
                     LoadedBehavior="Play"
                     MediaEnded="myGif_MediaEnded"
                     Stretch="UniformToFill"
