--- a/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
+++ b/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
@@ -153,7 +153,7 @@
                         Margin="0 7 0 0">
                         <TextBlock                        
                         FontSize="23"
-                        FontWeight="Regular"
+                        FontWeight="Regular" Margin="0,6,0,-6"
                         >Số lượng màu mỗi nhóm :</TextBlock>
                         <Grid
                         HorizontalAlignment="Left"
@@ -199,6 +199,42 @@
                             VerticalAlignment="Center"
                             Checked="RadioButton5_Checked"
                             Unchecked="RadioButton5_Unchecked"
+                        ></RadioButton>
+                        </Grid>
+                    </Grid>
+
+                    <Grid
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Margin="0 7 0 0">
+                        <TextBlock                        
+                        FontSize="23"
+                        FontWeight="Regular" Margin="0,0,-65,0"
+                        >Kiểu tìm kiếm :</TextBlock>
+                        <Grid
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Margin="280,10,-78,0"
+                        Height="35" Width="220">
+                            <RadioButton IsChecked="True"
+                            Margin="0,0,0,17"
+                            Content="Lớn nhất"
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Checked="RadioButtonTop_Checked"
+                            Unchecked="RadioButtonTop_Unchecked"
+                        ></RadioButton>
+                            <RadioButton
+                            Margin="124,0,0,17"
+                            Content="Tất cả"
+                            FontSize="20"
+                            Padding="5 -9 0 0 "
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Checked="RadioButtonAll_Checked"
+                            Unchecked="RadioButtonAll_Unchecked"
                         ></RadioButton>
                         </Grid>
                     </Grid>
